Added some imp feature like min -> sec, update dashboard as per latest data, etc

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -48,6 +48,7 @@ services:
     labels:
       - createdBy=uplert
 
+# Remove this since in prod not required
   mongo-express:
     image: mongo-express:1-20-alpine3.19
     container_name: mongoexpress
