--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -10,8 +10,8 @@ services:
       - mongo-compose-network
     ports:
       - "${MPORT}:27017"
-    volumes:
-      - $HOME/Documents/MongoDB:./data
+#    volumes:
+#      - $HOME/Documents/MongoDB:./data
     labels:
       - createdBy=DevBox
 
@@ -29,8 +29,8 @@ services:
       - ME_CONFIG_MONGODB_SERVER=mongodb
     ports:
       - "${EPORT}:8081"
-    volumes:
-      - $HOME/Documents/MongoDB:./data
+#    volumes:
+#      - $HOME/Documents/MongoDB:./data
     labels:
       - createdBy=DevBox
 
